--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,18 @@ p, h1, h2, h3, h4, h5, h6 {
 }
 
 /* start */
+:root {
+    --main-color: #1992D4;
+    --sidebar-text-color: white;
+    --main-header-background-color: white;
+    --main-header-box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.733);
+    --main-section-background-color: #DFE5ED;
+}
+
+body {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 .container {
     height: 100vh;
     display: grid;
@@ -60,15 +72,51 @@ p, h1, h2, h3, h4, h5, h6 {
 }
 
 .sidebar {
-    background-color: aqua;
+    color: var(--sidebar-text-color);
+    background-color: var(--main-color);
+    padding: 18px;
     grid-row: 1 / -1;
 }
 
+.sidebar-header {
+    display: grid;
+    grid-template-columns: 40px 1fr;
+    gap: 10px;
+    align-items: center;
+}
+
+.sidebar-header-text {
+    font-size: 1.5rem;
+    font-weight: 600;
+}
+
+.sidebar-items-container {
+    margin-top: 54px;
+    padding: 0;
+}
+
+.sidebar-items {
+    padding: 0;
+    display: grid;
+    grid-template-columns: 40px 1fr;
+    gap: 10px;
+    align-items: center;
+    justify-items: center;
+    margin-top: 16px;
+}
+
+.sidebar-items div {
+    justify-self: start;
+    font-weight: 500;
+    font-size: large;
+}
+
 .main-header {
-    background-color: pink;
+    box-shadow: var(--main-header-box-shadow);
+    background-color: var(--main-header-background-color);
 }
 
 .main-section {
-    background-color: beige;
+    background-color: var(--main-section-background-color);
 }
 
