--- a/styles.css
+++ b/styles.css
@@ -71,6 +71,7 @@ body {
     grid-template-rows: 0.45fr 2fr;
 }
 
+/* sidebar */
 .sidebar {
     color: var(--sidebar-text-color);
     background-color: var(--main-color);
@@ -111,9 +112,92 @@ body {
     font-size: large;
 }
 
+
+/* main header */
 .main-header {
     box-shadow: var(--main-header-box-shadow);
     background-color: var(--main-header-background-color);
+}
+
+.main-header-top {
+    display: grid;
+    grid-template-columns: 3fr 0.7fr;
+    padding: 18px 24px 18px 40px;
+}
+
+.search-box {
+    gap: 20px;
+    display: grid;
+    padding-right: 10vw;
+    grid-template-columns: 24px 1fr;
+    align-items: center;
+}
+
+.search-box input {
+    padding: 14px;
+    border-radius: 14px;
+    border: none;
+    height: 28px;
+    background-color: rgb(224, 231, 240);
+}
+
+.notifications {
+    display: grid;
+    gap: 20px;
+    align-items: center;
+    grid-template-columns: 24px 40px 3fr;
+}
+
+.notifications img:nth-child(2){
+    object-fit: cover;
+    height: 40px;
+    width: 100%;
+    border-radius: 50%;
+}
+
+.notifications div {
+    font-weight: bold;
+}
+
+
+.main-header-bottom {
+    display: grid;
+    padding: 18px 24px 18px 40px;
+    gap: 24px;
+    align-items: center;
+    grid-template-columns: 75px 1fr 350px;
+}
+
+.main-header-bottom img {
+    object-fit: cover;
+    height: 75px;
+    min-width: 75px;
+    border-radius: 50%;
+}
+
+.main-header-bottom .greeting-message{
+    font-weight: 700;
+    font-size: 0.9rem;
+}
+
+.main-header-bottom .greeting-message .name-profile {
+    font-size: 1.25rem;
+}
+
+.main-header-bottom .buttons-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 20px;
+}
+
+.main-header-bottom .buttons-container button {
+    border: none;
+    background-color: var(--main-color);
+    border: none;
+    font-weight: 600;
+    padding: 8px 20px 8px 20px;
+    color: white;
+    border-radius: 20px;
 }
 
 .main-section {
