--- a/styles.css
+++ b/styles.css
@@ -201,6 +201,97 @@ body {
 }
 
 .main-section {
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    gap: 20px;
+    padding: 24px;
     background-color: var(--main-section-background-color);
 }
 
+.cards-title {
+    margin-bottom: 10px;
+    font-weight: 600;
+    font-size: x-large;
+}
+
+.cards-container .cards-wrapper {
+    gap: 30px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(440px, 1fr));
+}
+
+.main-section .cards-container .card .actions-icons {
+    display: flex;
+    justify-content: end;
+    gap: 30px;
+    margin-top: 8%;
+}
+
+.main-section .cards-container .card {
+    height: 250px;
+    background-color: white;
+    border-radius: 8px;
+    border-left: 8px solid #F0B429;
+    padding: 30px;
+}
+
+.main-section .cards-container .card p {
+    color: #585858;
+}
+
+/* Anouncements */
+.main-section .main-aside .announcements-card {
+    background-color: white;
+    border-radius: 8px;
+    padding: 30px;
+}
+
+.main-section .main-aside .announcements-card hr {
+    margin: 8px 0 8px 0;
+}
+
+.main-section .main-aside .announcements-card .announcements-content .announcements-title {
+    font-weight: 700;
+}
+
+.main-section .main-aside .announcements-card .announcements-content .announcements-para{
+    color: #585858;
+}
+
+.main-section .main-aside .announcements-card .announcements-content {
+    padding: 8px;
+}
+
+/* trending */
+.main-section .main-aside .trending .cards-title {
+    margin-top: 30px;
+}
+
+.main-section .main-aside .trending .trending-wrapper {
+    display: grid;
+    gap: 30px;
+    padding: 30px;
+    background-color: white;
+    border-radius: 8px;
+}
+
+.main-section .main-aside .trending .trending-items img {
+    object-fit: cover;
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+}
+
+.main-section .main-aside .trending .trending-items {
+    display: grid;
+    gap: 14px;
+    grid-template-columns: 50px 1fr;
+}
+
+.main-section .main-aside .trending .trending-items-text .trending-people {
+    font-weight: 700;
+} 
+
+.main-section .main-aside .trending .trending-items-text .project-name {
+    color: #585858;
+}
